  buffer to be shown in a new view if that buffer had been changed on
  disk.

- Contents of filename field in "Save As" dialog box now take precedence
  over the currently selected file in the file list.

- Fixed possible deadlock on startup if jEdit was opening a file stored
  on a remote server using, say, the FTP plugin and the plugin displayed
  a modal dialog box.

+ API Additions:

- Added org.gjt.sp.jedit.gui.AnimatedIcon class (Kris Kopicki).

* Version 4.1pre7

Thanks to Chris Kent, Jonathan Revusky and Marcelo Vanzin for
contributing to this release.

+ Syntax Highlighting Changes:

- Freemaker syntax highlighting (Jonathan Revusky).

+ User Interface Changes:

- The parent directory list in the file system browser now requires a
  double-click (or middle mouse button click) to open a directory. This
  makes it consistent with the behavior of the file tree below it, which
  also requires double-clicks.

- The tooltips shown by the file system browser when a filename is
  partially obscured are no longer positioned over the filename, because
  Swing does not pass clicks inside tooltips to the underlying
  component.

- The help viewer now shows the title of the current page in place of
  the location field, and the location field is now gone. As a result
  the help viewer can no longer be used to view arbitriary URLs. Use the
  InfoViewer plugin for that purpose instead.

+ Global Options Dialog Changes:

- The Global Options dialog box now opens to display the most recently
  viewed option pane. Also the "overview" pane is gone.

- Merged the Editing and Mode-Specific option panes.

- The text area right-click popup menu now contains an item "Customize"
  for quick access to the Context Menu pane of the Global Options dialog
  box.

- If a HyperSearch produces no results, older result nodes are collapsed
  in the "HyperSearch Results" window.

+ Performance Improvements:

- Improved performance of line offset manager when a lot of changes are